samples/_failures_safe/1761076000_454ee3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe0d4ad5.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_fe0d4ad5.c:133:9: error: expected declaration or statement at end of input
  133 |         }
      |         ^
./samples/SAFE/__tmp_fe0d4ad5.c:133:9: error: expected declaration or statement at end of input
